# LCD

./: CMakeLists.txt  LoopClosureDetector.kdev4  README.md  framepose.cpp  framepose.h  frameposelist.cpp  frameposelist.h  main_couple_selector.cpp  main_flann.cpp  main_of2.cpp  main_precomputed.cpp  main_vector.cpp  matchviewer.cpp  matchviewer.h
BowMatchers/: bowextractor.cpp  bowextractor.h  bowmatcher.cpp  bowmatcher.h  flannbowmatcher.cpp  flannbowmatcher.h  openfabmap.cpp  openfabmap.h  vectorbowmatcher.cpp  vectorbowmatcher.h
MOSAIC/: CMakeLists.txt  mosaic.cpp  mosaic.h  pclvisualizerthread.cpp  pclvisualizerthread.h  tools.cpp  tools.h
MOSAIC/DescriptorsMatcher/: descriptorsmatcher.cpp  descriptorsmatcher.h
MOSAIC/Triangulation/: neighborhoodsgenerator.cpp  neighborhoodsgenerator.h  normaloptimizer.cpp  normaloptimizer.h  singlecameratriangulator.cpp  singlecameratriangulator.h
